# G22-sfo

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  NESTE-SESJON-PROMPT.md  prosjektplan.md  slagplan-fase3.md
006 analysis/: README.md  anonymisering.py  margin_mapping.py  pyproject.toml
006 analysis/aktiviteter/3_1_innledning_og_problemstilling/: README.md
006 analysis/aktiviteter/3_2_teori_og_litteratursok/: README.md
006 analysis/aktiviteter/3_3_casebeskrivelse_og_datainnsamling/: README.md
006 analysis/aktiviteter/3_3_casebeskrivelse_og_datainnsamling/resultat/: datarensing-rapport.md  salg_renset.csv  salg_renset.parquet
006 analysis/aktiviteter/3_3_casebeskrivelse_og_datainnsamling/scripts/: 01_datarensing.py
006 analysis/aktiviteter/3_4_data_metode_og_modellering/: README.md
006 analysis/aktiviteter/3_4_data_metode_og_modellering/resultat/: abc_klassifisering.csv  deskriptiv-og-abc-rapport.md  lp-rapport.md  lp-rapport_S1_baseline.md  lp-rapport_S1_primaer.md  lp-rapport_S2_primaer_sek.md  lp-rapport_S2_realistisk.md  lp-rapport_S3_konservativ.md  lp-scenarier-oppsummering.md  lp_allokering.csv  lp_allokering_S1_baseline.csv  lp_allokering_S1_primaer.csv  lp_allokering_S2_primaer_sek.csv  lp_allokering_S2_realistisk.csv  lp_allokering_S3_konservativ.csv
006 analysis/aktiviteter/3_4_data_metode_og_modellering/scripts/: 02_deskriptiv_og_abc.py  (+1 more)
006 analysis/aktiviteter/3_5_analyse_og_resultater/: README.md
006 analysis/aktiviteter/3_6_diskusjon/: README.md
006 analysis/milepaeler/: ms_002_godkjent_hovedutkast.md  ms_003_innlevert_rapport.md
(+160 files in other folders)
