[project]
name = "006-analysis"
version = "0.1.0"
description = "Analyseoppsett for hyllekapasitet vs. etterspørsel (Space Management) i Coop Extra X."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pulp>=2.8.0",
    "tabulate>=0.9.0",
    "pyarrow>=15.0.0",
]
